Wed Aug 26 08:59:26 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/AMI/AMI.idl:
        * connectors/AMI_CCM/AMI/AMI_exec.h:
        * connectors/AMI_CCM/AMI/AMI_exec.cpp:
        * connectors/AMI_CCM/AMI/AMI_internal_i.h:
        * connectors/AMI_CCM/AMI/AMI_internal_i.cpp:
        * connectors/AMI_CCM/AMI/AMI_perform_work.cpp:
        * connectors/AMI_CCM/AMI/AMI_server.h:
        * connectors/AMI_CCM/AMI/AMI_server.cpp:
        * connectors/AMI_CCM/Hello_Base/Hello.idl:
        * connectors/AMI_CCM/Hello_Base/Hello_Base.idl:
        * connectors/AMI_CCM/Hello_Base/Hello_Base.mpc:
        * connectors/AMI_CCM/Receiver/Hello_Receiver.idl:
        * connectors/AMI_CCM/Receiver/Hello_Receiver_exec.h:
        * connectors/AMI_CCM/Receiver/Hello_Receiver_exec.cpp:
        * connectors/AMI_CCM/Sender/Hello_Sender.idl:
        * connectors/AMI_CCM/Sender/Hello_Sender_exec.h:
        * connectors/AMI_CCM/Sender/Hello_Sender_exec.cpp:
          Added Hello.idl to seperate AMI interfaces from
          "normal" interfaces. Besides this changed naming
          convention to make a distinction between AMI interfaces
          and "normal" interfaces.

Tue Aug 25 13:30:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/AMI/AMI_exec.h:
        * connectors/AMI_CCM/AMI/AMI_exec.cpp:
        * connectors/AMI_CCM/AMI/AMI_server.h:
        * connectors/AMI_CCM/AMI/AMI_server.cpp:
          Removed unnecessary class variables.

Tue Aug 25 13:03:23 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/AMI_CCM/AMI/AMI_exec.h:
        * connectors/AMI_CCM/AMI/AMI_exec.cpp:
        * connectors/AMI_CCM/AMI/AMI_server.cpp:
          AMI collacation set to 0 since AMI CORBA client and
          AMI CORBA server are running in the same process.

        * connectors/AMI_CCM/Sender/Hello_Sender_exec.cpp:
          Improved logging.

        * connectors/AMI_CCM/descriptors/run_test.pl: